--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,8 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Tom Haber # Website name
-baseurl: 'https://tomhaber.github.io'
+title: Silvia Papalini
+baseurl: 'https://silviapapalini.github.io'
 copyright: '' # Footer text, e.g. '© {year} Me'
 
 ############################
