--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,23 +5,26 @@
 
 main:
   - name: Home
-    url: '#about'
+    url: '/'
     weight: 10
-  - name: Projects
-    url: '/project'
+  - name: 'About me'
+    url: '/about'
     weight: 20
-  # - name: Talks
-  #   url: '/event'
-  #   weight: 50
+  - name: Projects
+    url: '/projects'
+    weight: 30
+  - name: Talks
+    url: '#talks'
+    weight: 40
   - name: Publications
     url: '#featured'
-    weight: 30
-  - name: Software
-    url: '/software'
-    weight: 40
+    weight: 50
+  - name: Mindfulness
+    url: '/mindfulness'
+    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-  - name: CV
-    url: uploads/resume.pdf
-    weight: 70
+#  - name: CV
+#    url: uploads/resume.pdf
+#    weight: 70
