--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,6 +13,9 @@ main:
   - name: Projects
     url: '/project'
     weight: 30
+  - name: Events
+    url: '/event'
+    weight: 40
   - name: Publications
     url: '/publication'
     weight: 50
