--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,6 +22,9 @@ main:
   - name: Mindfulness
     url: '/mindfulness'
     weight: 60
+  - name: Roots in nature
+    url: '/Roots in nature'
+    weight: 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
