--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -62,7 +62,7 @@ main_menu:
   align: l
   show_logo: false
   show_language: false
-  show_day_night: false
+  show_day_night: true
   show_search: false
   highlight_active_link: true
 
