--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,11 +13,11 @@ main:
   - name: Projects
     url: '/project'
     weight: 30
-  - name: Events
-    url: '/event'
-    weight: 40
   - name: Publications
     url: '/publication'
+    weight: 40
+  - name: Events
+    url: '/event'
     weight: 50
   - name: Mindfulness
     url: '/mindfulness'
@@ -25,6 +25,9 @@ main:
   - name: Roots in nature
     url: '/Roots in nature'
     weight: 70
+  - name: Contacts
+    url: '/Contacts'
+    weight: 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
