--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -26,7 +26,7 @@ main:
     url: '/Roots in nature'
     weight: 70
   - name: Contacts
-    url: '/Contacts'
+    url: '/contacts'
     weight: 80
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
